<resources>
    <string name="app_name">Afitar</string>
    <string name="app_name_caps">AFITAR</string>
    <string name="action_settings">Settings</string>
    <string name="fit_message">Let\'s get fit!</string>
    <string name="button_message">Check</string>

    <string name="afitar_name">Fenderbenker</string>
    <string name="hp">HP: </string>
    <string name="hp_value">12</string>
    <string name="dmg">Damage: </string>
    <string name="dmg_value">5</string>
    <string name="stam">Stamina: </string>
    <string name="stam_value">3</string>

    <color name="blue">#ccfff5</color>
    <color name="white">#999999</color>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="title_activity_afitar">Afitar</string>

    <string name="preference_file_key">io.dylanmcguire.afitar.PREFERENCE_FILE_KEY</string>

    <string name="resting_heart_rate_key">io.dylanmcguire.afitar.RESTING_HEART_RATE_KEY</string>
    <string name="resting_heart_rate"></string>
    <string name="update_heart_rate_msg">Set Resting Heart Rate</string>

    <string name="update_food">Food</string>
    <string name="update_exercise">Exercise</string>
    <string name="update_sleep">Sleep</string>
    <string name="update_meds">Meds</string>
    <string name="update_mood">Mood</string>

    <string name="food_name">Nutrition Score: </string>
    <string name="exercise_name">Exercise Score: </string>
    <string name="sleep_name">Sleep Score: </string>
    <string name="meds_name">Medicine Score: </string>
    <string name="mood_name">Mood Score: </string>

    <string name="food_value">50</string>
    <string name="exercise_value">14</string>
    <string name="sleep_value">30</string>
    <string name="meds_value">45</string>
    <string name="mood_value">15</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_view_history">ViewHistoryActivity</string>
</resources>
